[package]
name = "image_proc"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = "0.8.4"
eframe = { version = "0.31.1" }
egui_extras = { version = "0.31.1", features = ["file", "image"] }
egui_plot = "0.31.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
opencv = "0.94.3"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
splines = "4.4.2"
